--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,7 +24,7 @@ jobs:
     - name: install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: test with pytest
       run: |
         pytest
