--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,9 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: check-json
+      - id: check-merge-conflict
+      - id: requirements-txt-fixer
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
