--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,3 +36,9 @@ jobs:
     - name: test with pytest
       run: |
         pytest
+    - name: publish package
+      if: ${{ github.event.pull_request.merged && github.event.base.ref == 'master' }}
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
