Use same sha as suggest by out of the box GAction

--- a/.github/workflows/publish-package-to-pypi.yml
+++ b/.github/workflows/publish-package-to-pypi.yml
@@ -27,7 +27,7 @@ jobs:
         - name: build package
           run: python -m build
         - name: publish package
-          uses: pypa/gh-action-pypi-publish@v1.5
+          uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
           with:
             user: __token__
             password: ${{ secrets.PYPI_API_TOKEN }}
