--- a/.github/workflows/publish-package-to-pypi.yml
+++ b/.github/workflows/publish-package-to-pypi.yml
@@ -9,17 +9,13 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
         - uses: actions/checkout@v2
         - name: set up Python
           uses: actions/setup-python@v2
           with:
-            python-version: ${{ matrix.python-version }}
+            python-version: "3.x"
         - name: install dependencies
           run: |
             python -m pip install --upgrade pip
