--- a/.github/workflows/pr-pre-submit-queue.yml
+++ b/.github/workflows/pr-pre-submit-queue.yml
@@ -34,4 +34,4 @@ jobs:
         flake8 parse_this test --count --show-source --statistics
     - name: test with pytest
       run: |
-        pytest
+        pytest --cache-clear --cov=parse_this --no-cov-on-fail test/ > pytest-coverage.txt
