--- a/.github/workflows/pr-pre-submit-queue.yml
+++ b/.github/workflows/pr-pre-submit-queue.yml
@@ -35,3 +35,7 @@ jobs:
     - name: test with pytest
       run: |
         pytest --cache-clear --cov=parse_this --no-cov-on-fail test/ > pytest-coverage.txt
+    - name: add coverage as PR comment
+      uses: coroo/pytest-coverage-commentator@v1.0.2
+      with:
+        pytest-coverage: pytest-coverage.txt
