--- a/.github/workflows/pr-pre-submit-queue.yml
+++ b/.github/workflows/pr-pre-submit-queue.yml
@@ -22,6 +22,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+
     - name: pip-secure-install
       uses: brettcannon/pip-secure-install@v1.0.0
 
