--- a/.github/workflows/publish-package-to-pypi.yml
+++ b/.github/workflows/publish-package-to-pypi.yml
@@ -20,10 +20,14 @@ jobs:
           with:
             python-version: "3.x"
 
-        - name: install dependencies
+        - name: upgrade pip
           run: |
             python -m pip install --upgrade pip
-            pip install build
+
+        - name: pip-secure-install
+          uses: brettcannon/pip-secure-install@v1.0.0
+          with:
+            requirements-file: requirements-build.txt
 
         - name: build package
           run: python -m build
